# RusticSort

./: .gitignore  Cargo.toml  README.md  clippy.txt  com.mahmoud.rusticsort.desktop  com.mahmoud.rusticsort.metainfo.xml  compile_errors.txt  out.txt  rusticsort.desktop
.github/workflows/: ci.yml
assets/: strings.toml
src/: config.rs  main.rs  strings.rs
src/engine/: mod.rs  organizer.rs  rules.rs
src/ui/: mod.rs  styles.rs
target-check/: .rustc_info.json
target-check/debug/.fingerprint/RusticSort-2afa44e927416f8e/: output-bin-RusticSort
target-check/debug/.fingerprint/ab_glyph-93b37ba84361bb1c/: lib-ab_glyph  lib-ab_glyph.json
target-check/debug/.fingerprint/ab_glyph_rasterizer-ba37a33ccfe006ab/: lib-ab_glyph_rasterizer  lib-ab_glyph_rasterizer.json
target-check/debug/.fingerprint/adler2-914a97cb44321ce5/: lib-adler2  lib-adler2.json
target-check/debug/.fingerprint/ahash-37f631104e42bb6f/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-check/debug/.fingerprint/ahash-61d48fea19b98193/: lib-ahash  lib-ahash.json
target-check/debug/.fingerprint/ahash-68d1d8a88de0a287/: build-script-build-script-build  build-script-build-script-build.json
target-check/debug/.fingerprint/ahash-757a6599219abe6e/: build-script-build-script-build  build-script-build-script-build.json
target-check/debug/.fingerprint/ahash-7754556207dfa1a4/: lib-ahash  lib-ahash.json
target-check/debug/.fingerprint/ahash-99bbd149a8c5c588/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-check/debug/.fingerprint/allocator-api2-0b2fc4cd8c198275/: lib-allocator_api2  lib-allocator_api2.json
target-check/debug/.fingerprint/approx-61aa59aa852a485a/: lib-approx  lib-approx.json
target-check/debug/.fingerprint/arrayref-c13cf78c90e800c6/: lib-arrayref  lib-arrayref.json
target-check/debug/.fingerprint/arrayvec-33e3040690f2e91b/: lib-arrayvec  lib-arrayvec.json
target-check/debug/.fingerprint/as-raw-xcb-connection-aac316ba3421cc8d/: lib-as_raw_xcb_connection  lib-as_raw_xcb_connection.json
target-check/debug/.fingerprint/ash-44614617d437a5ad/: lib-ash  lib-ash.json
target-check/debug/.fingerprint/ash-e48b86886a8df25f/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-check/debug/.fingerprint/ash-f1c655b6ab93d7dd/: build-script-build-script-build  build-script-build-script-build.json
target-check/debug/.fingerprint/async-broadcast-9e0370986532981f/: lib-async_broadcast  lib-async_broadcast.json
target-check/debug/.fingerprint/async-channel-a379babb76a7ce7e/: lib-async_channel  lib-async_channel.json
(+804 files in other folders)
