[package]
name = "RusticSort"
version = "0.1.0"
edition = "2024"
description = "Smart File Organizer"
license = "MIT"
authors = ["Mahmoud Abdelsamea <obaaa8@gmail.com>"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/RusticSort", dest = "/usr/bin/RusticSort", mode = "755" },
    { source = "rusticsort.desktop", dest = "/usr/share/applications/rusticsort.desktop", mode = "644" }
]

[dependencies]
dirs = "6.0.0"
iced = "0.13.1"
lazy_static = "1.5.0"
open = "5.3.3"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
toml = "1.0.3"
walkdir = "2.5.0"

[package.metadata.bundle]
name = "RusticSort"
identifier = "com.mahmoud.rusticsort"
category = "Utility"
short_description = "Smart File Organizer"
long_description = """
RusticSort is a desktop application that automatically organizes messy folders
based on smart, configurable rules.
"""
