[package]
name = "RusticSort"
version = "0.1.0"
edition = "2024"
description = "Smart File Organizer"
license = "MIT"
authors = ["Mahmoud Abdelsamea <obaaa8@gmail.com>"]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/RusticSort", dest = "/usr/bin/RusticSort", mode = "755" },
    { source = "com.mahmoud.rusticsort.desktop", dest = "/usr/share/applications/com.mahmoud.rusticsort.desktop", mode = "644" },
    { source = "com.mahmoud.rusticsort.metainfo.xml", dest = "/usr/share/metainfo/com.mahmoud.rusticsort.metainfo.xml", mode = "644" },
    { source = "assets/icons/rusticsort-48.png", dest = "/usr/share/icons/hicolor/48x48/apps/com.mahmoud.rusticsort.png", mode = "644" },
    { source = "assets/icons/rusticsort-64.png", dest = "/usr/share/icons/hicolor/64x64/apps/com.mahmoud.rusticsort.png", mode = "644" },
    { source = "assets/icons/rusticsort-128.png", dest = "/usr/share/icons/hicolor/128x128/apps/com.mahmoud.rusticsort.png", mode = "644" },
    { source = "assets/icons/rusticsort-256.png", dest = "/usr/share/icons/hicolor/256x256/apps/com.mahmoud.rusticsort.png", mode = "644" },
]

[dependencies]
dirs = "6.0.0"
iced = { version = "0.13.1", features = ["image"] }
lazy_static = "1.5.0"
open = "5.3.3"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = "1.49.0"
toml = "1.0.3"
walkdir = "2.5.0"

[package.metadata.bundle]
name = "RusticSort"
identifier = "com.mahmoud.rusticsort"
category = "Utility"
short_description = "Smart File Organizer"
long_description = """
RusticSort is a desktop application that automatically organizes messy folders
based on smart, configurable rules.
"""
